# fireward

./: .gitignore  .travis.yml  Dockerfile  LICENSE  changelog.md  firedoor.cabal  fireward.cabal  makefile  project.vim  readme.md  stack.yaml
.circleci/: config.yml
.github/workflows/: main.yml
.opensource/: package.json
app/: Main.hs
docs/: func-monad.md
examples/: array.ward  complete.ward  const.ward  integ.ward  map.ward  readme.ward  simple.ward  small.ward  smoke-test.ward
integration/: default.rules  emulator.ts  firebase.json  package-lock.json  package.json  readme.md  tsconfig.json
integration/test/: arraysAndTuples.spec.ts  const.spec.ts  expressions.spec.ts  logic.spec.ts  optionalTypes.spec.ts  paths.spec.ts  primitiveTypes.spec.ts  simple.spec.ts  validations.spec.ts
integration/util/: emulator.ts  rules.ts
integration/wards/: arraysAndTuples.ts  arraysAndTuples.ward  const.ts  const.ward  expressions.ts  expressions.ward  logic.ts  logic.ward  optionalTypes.ts  optionalTypes.ward  paths.ts  paths.ward  primitiveTypes.ts  primitiveTypes.ward  simple.ts  simple.ward  validations.ts  validations.ward
npm-bin/: .npmignore  dl-releases.sh  index.js  package-lock.json  package.json  publish.sh
src/: CodePrinter.hs  Combinators.hs  Error.hs  ExprParser.hs  ExprPrinter.hs  Loc.hs  LogicPrinter.hs  OptionParser.hs  Parser.hs  RuleGenerator.hs  RuleLang.hs  RuleParser.hs  RulePrinter.hs  TSGenerator.hs
test/: ExprParserSpec.hs  LocSpec.hs  LogicPrinterSpec.hs  OptionParserSpec.hs  ParserSpec.hs  RuleGeneratorSpec.hs  RuleLangSpec.hs  RuleParserSpec.hs  TSGeneratorSpec.hs
test/fixtures/: indent.rules  indent.ward
travis/: buildfile.sh  getstack.sh
