name:                fireward
version:             0.0.16
-- synopsis:
-- description:
homepage:            https://github.com/trouvaille/fireward#readme
license:             MIT
license-file:        LICENSE
author:              Bijou Trouvaille
maintainer:          github.com/bijoutrouvaille
copyright:           2017 Bijou Trouvaille
category:            Web
build-type:          Simple
extra-source-files:  readme.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Parser
                       , RuleParser
                       , RuleGenerator
                       , Combinators
                       , ExprParser
                       , ExprPrinter
                       , OptionParser
                       , TSGenerator
                       , Loc
                       , Error
                       , LogicPrinter

  other-modules:       Paths_fireward
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable fireward
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wincomplete-patterns
  build-depends:       base
                     , fireward
  default-language:    Haskell2010

test-suite fireward-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , fireward
                     , hspec
                     , QuickCheck
  other-modules:      ExprParserSpec
                    , LocSpec
                    , LogicPrinterSpec
                    , OptionParserSpec
                    , ParserSpec
                    , RuleGeneratorSpec
                    , RuleParserSpec
                    , TSGeneratorSpec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N 
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/bijoutrouvaille/fireward
